[tool.poetry]
name = "nvidia-riva"
version = "0.1.0"
description = "RAG with NVIDIA"
authors = ["Hayden Wolff <hwolff@nvidia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.1"
pymilvus = ">=2.3.0"
langchain-nvidia-aiplay = "^0.0.2"
pypdf = ">=3.1"
pywav = "^1.1"
nvidia-riva-client = "^2.14.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.21"

[tool.langserve]
export_module = "nvidia_riva"
export_attr = "chain"

[tool.templates-hub]
use-case = "rag"
author = "LangChain"
integrations = ["Milvus", "NVIDIA"]
tags = ["vectordbs"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"